grammar.js
    chunk: ($) => seq(optional($.hash_bang_line), optional($._block)),

    // block = {stat [';']} [laststat [';']]
    _block: ($) =>
      choice(
        seq($.last_statement, optional(";")),
        seq(
          repeat1(seq($.statement, optional(";"))),
          optional(seq($.last_statement, optional(";"))),
        ),
      ),

    // laststat = 'return' [explist] | 'break' | 'continue'
    _type_identifier: ($) => alias($.identifier, $.type_identifier),

    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    _reserved_identifier: ($) =>
      choice(
        "continue",
        "export",
        "type",
        "typeof",
        "declare",
        "class",
        "extends",
      ),

    // binding = NAME [':' Type]
    binding: ($) =>
      seq(
        field("name", choice($.identifier)),
        optional(seq(":", field("type", $.type))),
      ),

    // bindinglist = binding [',' bindinglist]
    binding_list: ($) => commaSep1($.binding),

    /*
      stat = varlist '=' explist |
          var compoundop exp |
          functioncall |
          'do' block 'end' |
          'while' exp 'do' block 'end' |
          'repeat' block 'until' exp |
          'if' exp 'then' block {'elseif' exp 'then' block} ['else' block] 'end' |
          'for' binding '=' exp ',' exp [',' exp] 'do' block 'end' |
          'for' bindinglist 'in' explist 'do' block 'end' |
          attributes 'function' funcname funcbody |
          attributes 'local' 'function' NAME funcbody |
          'local' bindinglist ['=' explist] |
          attributes 'const' 'function' NAME funcbody | [TODO(teapo): Luau grammar does not include attributes here but I'm unsure that's really intended]
          'const' bindinglist '=' explist |
          ['export'] 'type' NAME ['<' GenericTypeListWithDefaults '>'] '=' Type |
          ['export'] 'type' 'function' NAME funcbody
    */
    for_numeric_clause: ($) =>
      seq(
        field("binding", $.binding),
        "=",
        field("start", $.expression),
        ",",
        field("end", $.expression),
        optional(seq(",", field("step", $.expression))),
      ),

    // bindinglist 'in' explist
    for_generic_clause: ($) =>
      seq($.binding_list, "in", alias($._expression_list, $.expression_list)),

    // '...' [':' GenericTypePack | Type]
    _method_explicit_type_parameter_instantiation: ($) =>
      seq(
        field("method", $.method_index_expression),
        "<<",
        $.type_parameters,
        ">>",
      ),

    // prefixexp . NAME
    dot_index_expression: ($) =>
      seq(
        field("table", $._prefix_expression),
        ".",
        field("field", $._field_identifier),
      ),

    // prefixexp ':' NAME
    _method_index_expression: ($) =>
      seq(
        field("table", $._prefix_expression),
        ":",
        field("method", $._field_identifier),
      ),

    method_index_expression: ($) =>
      choice(
        $._method_index_expression,
        alias(
          $._method_explicit_type_parameter_instantiation,
          $.explicit_type_parameter_instantiation,
        ),
      ),

    // field = '[' exp ']' '=' exp | NAME '=' exp | exp
    compound_assignment_statement: ($) =>
      seq(
        field("left", $.variable),
        field("operator", $.compound_operator),
        field("right", $.expression),
      ),

    // compoundop :: '+=' | '-=' | '*=' | '/=' | '//=' | '%=' | '^=' | '..='
    compound_operator: ($) =>
      choice("+=", "-=", "*=", "/=", "//=", "%=", "^=", "..="),

    // 'continue'
    function_declaration: ($) =>
      seq(
        field("attributes", optional($.attributes)),
        "function",
        field("name", $._function_name),
        $._function_body,
      ),

    // attributes 'local' 'function' NAME funcbody
    local_function_declaration: ($) =>
      seq(
        field("attributes", optional($.attributes)),
        "local",
        "function",
        field("name", $.identifier),
        $._function_body,
      ),

    // attributes 'local' 'function' NAME funcbody
    local_variable_declaration: ($) =>
      seq(
        "local",
        $.binding_list,
        optional(seq("=", alias($._expression_list, $.expression_list))),
      ),

    // 'cons' bindinglist ['=' explist]
    const_variable_declaration: ($) =>
      seq(
        "const",
        $.binding_list,
        optional(seq("=", alias($._expression_list, $.expression_list))),
      ),

    // pars ::= '(' [litlist] ')' | littable | STRING
    attribute_parameters: ($) =>
      choice(
        seq("(", optional($.literal_list), ")"),
        $.literal_table,
        $.string,
      ),

    // '@[' parattr {',' parattr} ']'
    parameter_attribute: ($) =>
      seq(field("name", $.identifier), optional($.attribute_parameters)),

    // attributes ::= {attribute}
    attributes: ($) => repeat1($.attribute),

    // attribute ::= '@' NAME | '@[' parattr {',' parattr} ']'
    attribute: ($) =>
      choice(
        seq(
          "@",
          field(
            "name",
            alias(token.immediate(/[a-zA-Z_][0-9a-zA-Z_]*/), $.identifier),
          ),
        ),
        seq("@", token.immediate("["), commaSep1($.parameter_attribute), "]"),
      ),

    // littable ::= '{' [litfieldlist] '}'
    literal_table: ($) => seq("{", optional($.literal_field_list), "}"),

    // litfieldlist ::= litfield {fieldsep litfield} [fieldsep]
    literal_field_list: ($) =>
      seq($.literal_field, repeat(seq($._field_separator, $.literal_field))),

    // litfield ::= [NAME '='] literal
    literal_field: ($) =>
      seq(
        optional(seq(field("left", $._field_identifier), "=")),
        field("right", $.literal),
      ),

    // literal ::= 'nil' | 'false' | 'true' | NUMBER | STRING | littable
    literal: ($) =>
      choice($.nil, $.true, $.false, $.number, $.string, $.literal_table),

    // litlist ::= literal {',' literal}
    literal_list: ($) => commaSep1($.literal),

    // ['export'] 'type' NAME ['<' GenericTypeListWithDefaults '>'] '=' Type
    type_alias_declaration: ($) =>
      seq(
        optional("export"),
        "type",
        field("name", $._type_identifier),
        optional(
          seq(
            "<",
            field("type_parameters", $.generic_type_list_with_defaults),
            ">",
          ),
        ),
        "=",
        field("type", $.type),
      ),

    // ['export'] 'type' 'function' NAME funcbody
    type_function_declaration: ($) =>
      seq(
        optional("export"),
        "type",
        "function",
        field("name", $._type_identifier),
        $._function_body,
      ),

    // See Parser::parseDeclaration in the source code of the Luau parser.

    declare_global_declaration: ($) =>
      seq("declare", field("name", $.identifier), ":", field("type", $.type)),

    declare_global_function_declaration: ($) =>
      seq(optional($.attributes), "declare", $._function_prototype),

    _class_declaration_body: ($) =>
      seq(
        repeat(
          choice(
            alias(seq($._function_prototype), $.class_function),
            alias($._bare_table_property, $.extern_type_property),
            alias($._bare_table_indexer, $.extern_type_indexer),
          ),
        ),
        "end",
      ),

    declare_class_declaration: ($) =>
      seq(
        "declare",
        "class",
        field("name", $.identifier),
        optional(seq("extends", field("superclass", $.identifier))),
        $._class_declaration_body,
      ),

    generic_type_parameter: ($) => $._type_identifier,

    // GenericTypeList = NAME [',' GenericTypeList] | GenericTypePackParameter {',' GenericTypePackParameter}
    generic_type_list_with_defaults: ($) =>
      choice(
        seq(
          commaSep1(
            choice(
              $.generic_type_parameter,
              $.generic_type_parameter_with_default,
            ),
          ),
          optional(
            seq(
              ",",
              commaSep1(
                choice(
                  $.generic_type_pack_parameter,
                  $.generic_type_pack_parameter_with_default,
                ),
              ),
            ),
          ),
        ),
        commaSep1(
          choice(
            $.generic_type_pack_parameter,
            $.generic_type_pack_parameter_with_default,
          ),
        ),
      ),

    // GenericTypePackParameterWithDefault = NAME '...' '=' (TypePack | VariadicTypePack | GenericTypePack)
    generic_type_parameter_with_default: ($) =>
      seq($._type_identifier, "=", field("default", $.type)),

    // GenericTypePackParameter = NAME '...'
    generic_type_pack_parameter: ($) => seq($._type_identifier, "..."),

    // GenericTypePackParameterWithDefault = NAME '...' '=' (TypePack | VariadicTypePack | GenericTypePack)
    generic_type_pack_parameter_with_default: ($) =>
      seq(
        $._type_identifier,
        "...",
        "=",
        field(
          "default",
          choice($.type_pack, $.variadic_type_pack, $.generic_type_pack),
        ),
      ),

    // exp = asexp { binop exp } | unop exp { binop exp }
    function_definition: ($) =>
      seq(
        field("attributes", optional($.attributes)),
        "function",
        $._function_body,
      ),

    // 'function' NAME ['<' GenericTypeList '>'] '(' [parlist] ')' [':' ReturnType]
    _function_prototype: ($) =>
      seq(
        "function",
        field("name", $.identifier),
        $._unnamed_function_prototype,
      ),

    // ['<' GenericTypeList '>'] '(' [parlist] ')' [':' ReturnType]
    _function_body: ($) =>
      seq(
        $._unnamed_function_prototype,
        field("body", alias(optional($._block), $.block)),
        "end",
      ),

    // ifelseexp = 'if' exp 'then' exp {'elseif' exp 'then' exp} 'else' exp
    generic_type_pack: ($) =>
      seq(
        choice(
          $._type_identifier,
          alias($._reserved_identifier, $.type_identifier),
        ),
        "...",
      ),

    // VariadicTypePack = '...' Type
    variadic_type_pack: ($) => seq("...", $.type),

    // TypePack = '(' [TypeList] ')'
    type_pack: ($) => seq("(", optional($._type_list), ")"),

    // TypeList = Type [',' TypeList] | '...' Type
    _type_list: ($) =>
      choice(
        //seq(commaSep1($.type), optional(seq(",", "...", $.type))),
        seq(
          commaSep1($.type),
          optional(seq(",", choice($.variadic_type_pack, $.generic_type_pack))),
        ),
        choice($.variadic_type_pack, $.generic_type_pack),
      ),

    // TypeParams = (Type | TypePack | VariadicTypePack | GenericTypePack) [',' TypeParams]
    _field_separator: ($) => choice(",", ";"),

    singleton_type: ($) => choice($.string, $.true, $.false),

    // NAME ['.' NAME] [ '<' [TypeParams] '>' ]
    type_reference: ($) =>
      prec.right(
        PREC.TYPE_REFERENCE,
        seq(
          choice(
            field(
              "name",
              choice(
                $._type_identifier,
                alias($._reserved_identifier, $.type_identifier),
              ),
            ),
            seq(
              field(
                "prefix",
                choice(
                  $.identifier,
                  alias($._reserved_identifier, $.identifier),
                ),
              ),
              ".",
              field(
                "name",
                alias(
                  choice(
                    $._type_identifier,
                    alias($._reserved_identifier, $.type_identifier),
                  ),
                  $.type_identifier,
                ),
              ),
            ),
          ),
          optional(
            seq("<", field("parameters", optional($.type_parameters)), ">"),
          ),
        ),
      ),

    // 'typeof' '(' exp ')'
    table_type: ($) =>
      seq("{", optional(choice($.type, $.table_property_list)), "}"),

    // PropList = TablePropOrIndexer {fieldsep TablePropOrIndexer} [fieldsep]
    table_property_list: ($) =>
      seq(
        sep1(choice($.table_property, $.table_indexer), $._field_separator),
        optional($._field_separator),
      ),

    _bare_table_property: ($) =>
      seq(
        field(
          "left",
          alias(
            choice($._field_identifier, $._reserved_identifier),
            $.field_identifier,
          ),
        ),
        ":",
        field("right", $.type),
      ),

    _bare_table_indexer: ($) =>
      seq("[", field("key", $.type), "]", ":", field("value", $.type)),

    // TablePropOrIndexer = ['read' | 'write'] (TableProp | TableIndexer)
    // TableProp = NAME ':' Type
    table_property: ($) =>
      seq(
        field(
          "attribute",
          optional(
            alias($._table_property_attribute, $.table_property_attribute),
          ),
        ),
        $._bare_table_property,
      ),

    // TablePropOrIndexer = ['read' | 'write'] (TableProp | TableIndexer)
    // TableIndexer = '[' Type ']' ':' Type
    table_indexer: ($) =>
      seq(
        field(
          "attribute",
          optional(
            alias($._table_property_attribute, $.table_property_attribute),
          ),
        ),
        $._bare_table_indexer,
      ),

    // 'read' | 'write'
    _table_property_attribute: ($) =>
      alias(choice("read", "write"), $.identifier),

    // [NAME ':'] Type
    type_binding: ($) =>
      seq(
        optional(
          seq(
            field(
              "name",
              choice($.identifier, alias($._reserved_identifier, $.identifier)),
            ),
            ":",
          ),
        ),
        field("type", $.type),
      ),

    // BoundTypeList = [NAME ':'] Type [',' BoundTypeList] | GenericTypePack | VariadicTypePack
    bound_type_list: ($) =>
      choice(
        seq(
          commaSep1($.type_binding),
          optional(seq(",", choice($.generic_type_pack, $.variadic_type_pack))),
        ),
        $.generic_type_pack,
        $.variadic_type_pack,
      ),

    // ReturnType = Type | TypePack | GenericTypePack | VariadicTypePack
    _return_type: ($) =>
      choice(
        $.type,
        prec.dynamic(1, $.type_pack),
        $.generic_type_pack,
        $.variadic_type_pack,
      ),

    // FunctionType = ['<' GenericTypeList '>'] '(' [BoundTypeList] ')' '->' ReturnType
    function_type: ($) =>
      prec.right(
        seq(
          optional(seq("<", $.generic_type_list, ">")),
          "(",
          field("parameters", optional($.bound_type_list)),
          ")",
          "->",
          field("return_type", $._return_type),
        ),
      ),

    // '(' Type ')'
    interpolated_string: ($) =>
      seq(
        "`",
        repeat(
          choice(
            field(
              "content",
              alias($._interpolation_string_content, $.string_content),
            ),
            $._escape_sequence,
            $.string_interpolation,
          ),
        ),
        "`",
      ),

    _escape_sequence: ($) =>
      choice(
        prec(2, token.immediate(seq("\\", /[^abfnrtvxu'\"`\\\?]/))),
        prec(1, $.escape_sequence),
      ),

    escape_sequence: (_) =>
      token.immediate(
        seq(
          "\\",
          choice(
            /[^xu0-7]/,
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /u[0-9a-fA-F]{4}/,
            /u\{[0-9a-fA-F]+\}/,
            /U[0-9a-fA-F]{8}/,
          ),
        ),
      ),

    _interpolation_string_content: (_) =>
      choice(token.immediate(prec(1, /[^`\{\\]+/)), "\\{"),

    string_interpolation: ($) => seq("{", $.expression, "}"),

    // Luau has hex and binary numbers, with the 0x and 0b prefixes, and
    // numbers can contain underscores.
